src/objects/Procedure_Add_on__c.object
<CustomObject>
    <fields>
        <fullName>Details__c</fullName>
        <label>Details</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Medical_Professional__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Medical Professional</label>
        <referenceTo>Medical_Professional__c</referenceTo>
        <relationshipLabel>Procedure Add-ons</relationshipLabel>
        <relationshipName>Procedure_Add_ons</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Price__c</fullName>
        <label>Price</label>
        <precision>18</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Procedure__c</fullName>
        <label>Procedure</label>
        <referenceTo>Procedure__c</referenceTo>
        <relationshipLabel>Procedure Add-ons</relationshipLabel>
        <relationshipName>Procedure_Add_ons</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Procedure Add-on</label>
    <nameField>
        <label>Procedure Add-on Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Procedure Add-ons</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>